Wed Jun 23 11:48:10 2004  Emre Turkay  <turkaye@dre.vanderbilt.edu>

	* DnC/Config_Handlers/Process_Element.h:
	* DnC/Config_Handlers/Process_Element.i:
	* DnC/Config_Handlers/Process_Element.tpp:

	The functions and classes are placed in the deployment namespace.

4Wed Jun 23 03:14:16 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* DnC/DomainApplicationManager/DomainApplicationManager_Impl.cpp:
	* DnC/DomainApplicationManager/DomainApplicationManager_Impl.h:
	* DnC/DomainApplicationManager/DomainApplicationManager_Impl.inl:
	* DnC/ExecutionManager/ExecutionManager_Impl.cpp:
	* DnC/ExecutionManager/ExecutionManager_Impl.h:
	* DnC/NodeApplicationManager/ImplementationInfo.cpp:
	* DnC/NodeApplicationManager/NodeApplicationManager_Impl.cpp:
	* DnC/NodeApplicationManager/NodeApplicationManager_Impl.h:
	* DnC/NodeApplicationManager/NodeApplicationManager_Impl.inl:
	* DnC/NodeManager/NodeDaemon_Impl.cpp:
	* DnC/NodeManager/NodeDaemon_Impl.h:
	* DnC/RepositoryManager/RepositoryManager_Impl.cpp:
	* DnC/RepositoryManager/RepositoryManager_Impl.h:
	* DnC/RepositoryManager/Repository_Manager.cpp:
	* DnC/RepositoryManager/Update_Plan.cpp:
	* DnC/ciao/Container_Base.cpp:
	* DnC/ciao/Container_Base.h:
	* DnC/ciao/Cookies.cpp:
	* DnC/ciao/Deployment_Core.idl:
	* DnC/ciao/NodeApp_CB_Impl.cpp:
	* DnC/ciao/NodeApp_CB_Impl.h:
	* DnC/ciao/NodeApplication_Impl.cpp:
	* DnC/ciao/NodeApplication_Impl.h:
	* DnC/ciao/NodeApplication_Impl.inl:
	* DnC/ciao/Servant_Impl_Base.cpp:
	* DnC/ciao/Servant_Impl_T.cpp:

	  Performed a code review and left comments for DnC developers.

Tue Jun 22 18:05:19 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CCF/Documentation/Build.html:

	  Added comment about the requirement of boost 1.30.2 in order
	  to build CCF/CIDLC on Windows.
	  Thanks to Valery <acapstan@bigpond.net.au> for catching this.

Tue Jun 22 10:38:58 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* CIDLC/ServantSourceGenerator.cpp:
