@@ -25,6 +25,7 @@
 #include "tao/Exception.h"
 #include "CIAO/DnC/Config_Handlers/XercesString.h"
 #include <xercesc/util/XMLUniDefs.hpp>
+#include <xercesc/parsers/XercesDOMParser.hpp>
 #include "CIAO/DnC/Config_Handlers/Config_Handler_export.h"
 #include "CIAO/DnC/Config_Handlers/Domain_Handler.h"
 #include "CIAO/DnC/Config_Handlers/PC_Handler.h"
@@ -53,6 +54,7 @@ using xercesc::DOMDocumentTraversal;
 using xercesc::DOMNodeIterator;
 using xercesc::DOMNode;
 using xercesc::DOMNodeFilter;
+using xercesc::XercesDOMParser;
 
 #if !defined (ACE_LACKS_PRAGMA_ONCE)
 # pragma once
